syntax = "proto3";

package notification;

option go_package = "pb/proto;proto";

service NotificationService {
  rpc SendVerificationCode(SendVerificationCodeRequest) returns (SendVerificationCodeResponse);
  rpc VerifyCode(VerifyCodeRequest) returns (VerifyCodeResponse);
}

message SendVerificationCodeRequest {
  string email = 1;
}

message SendVerificationCodeResponse {
  string message = 1;
}

message VerifyCodeRequest {
  string email = 1;
  string code = 2;
}

message VerifyCodeResponse {
  bool is_valid = 1;
}